# Todo-App

./: .gitignore
Phase I/: .gitignore  CLAUDE.md
Phase I/.specify/memory/: constitution.md
Phase I/specs/001-todo-management/: data-model.md  quickstart.md  spec.md  tasks.md
Phase I/src/: models.py  task_manager.py
PhaseII/: .gitignore  CLAUDE.md  next.config.js  package-lock.json  package.json  simple_test.py  test_implementation.py  tsconfig.json
PhaseII/.claude/agents/: fastapi-sqlmodel-backend.md  nextjs-frontend-engineer.md  qa-spec-guardian.md  system-architect.md  ui-ux-designer.md
PhaseII/.claude/skills/: api-contract-validator.skill.md  auth-jwt-enforcer.skill.md  fastapi-crud-generator.skill.md  (+7 more)
PhaseII/backend/: README.md  TECHNICAL_DOCS.md  pyproject.toml  requirements.txt
PhaseII/backend/src/: __init__.py  config.py  main.py
PhaseII/backend/src/api/: auth.py  tasks.py
PhaseII/backend/src/database/: __init__.py  config.py
PhaseII/backend/src/middleware/: __init__.py  auth.py
PhaseII/backend/src/models/: task.py  user.py
PhaseII/backend/src/services/: __init__.py  auth.py  task_service.py
PhaseII/backend/src/utils/: __init__.py  exceptions.py  logging_config.py
PhaseII/backend/tests/contract/: test_auth.py  test_tasks.py
PhaseII/backend/tests/integration/: test_auth.py  test_tasks.py
PhaseII/backend/tests/security/: test_jwt_enforcement.py  test_jwt_security.py  test_user_isolation.py
PhaseII/backend/tests/unit/: test_auth_middleware.py  test_task_service.py
PhaseII/components/: Header.tsx
PhaseII/src/: main.py
(+46 files in other folders)
